--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^1.10.0",
+    "@modelcontextprotocol/sdk": "^1.18.0",
+    "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "dotenv": "^17.2.2"
   }
 }
