--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "resume-iterator",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "type": "module",
   "scripts": {
+    "dev": "npx tsc && node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
