--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^1.10.0",
-    "@modelcontextprotocol/sdk": "^1.18.0",
-    "@modelcontextprotocol/server-filesystem": "^2025.8.21",
+    "marked-react": "^3.0.1",
     "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18"
